--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<title>Comic Book Characters!</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
-	<link rel="stylesheet" href="assets/css/style.css">
 	<link rel="stylesheet" href="https://bootswatch.com/superhero/bootstrap.min.css">
+	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
@@ -35,7 +35,7 @@
 			<form id="char-form">
 				<label for="character-input">Add a Character</label>
 				<input type="text" id="character-input"><br>
-				<input id="add-character" type="submit" value="Add a Character">
+				<input class="btn btn-default" id="add-character" type="submit" value="Add a Character">
 			</form>
 			</div>
 		</div>
