--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
 	<link rel="stylesheet" href="https://bootswatch.com/superhero/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
 </head>
 <body>
 
 
-	<div class="container">
+
 		<div class ="jumbotron">
-			Comic Book Characters!
+			<img src="assets/images/title.png" alt="title">
 		</div>
-	</div>
+
 
 	<div class="container">
 		<div class="row">
@@ -33,9 +34,9 @@
 			</div>
 			<div class="col-md-3">
 			<form id="char-form">
-				<label for="character-input">Add a Character</label>
+				<label for="character-input"></label>
 				<input type="text" id="character-input"><br>
-				<input class="btn btn-default" id="add-character" type="submit" value="Add a Character">
+				<input class="btn btn-success" id="add-character" type="submit" value="Add a Character">
 			</form>
 			</div>
 		</div>
