--- a/index.html
+++ b/index.html
@@ -21,20 +21,23 @@
 		</div>
 	</div>
 
+	<div>
+		<div class="col-md-12">
+		<form id="char-form">
+		<label for="character-input"></label>
+		<input type="text" id="character-input"><br>
+		<input class="btn btn-success" id="add-character" type="submit" value="Add a Character">
+		</form>
+		</div>
+	</div>
+
 	<div class="container">
 		<div class="row">
-			<div id="column1" class="col-md-3">
+			<div id="column1" class="col-md-4">
 			</div>
-			<div id="column2" class="col-md-3">
+			<div id="column2" class="col-md-4">
 			</div>
-			<div id="column3" class="col-md-3">
-			</div>
-			<div class="col-md-3">
-			<form id="char-form">
-				<label for="character-input"></label>
-				<input type="text" id="character-input"><br>
-				<input class="btn btn-success" id="add-character" type="submit" value="Add a Character">
-			</form>
+			<div id="column3" class="col-md-4">
 			</div>
 		</div>
 	</div>
