--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<img src="assets/images/title.png" alt="title">
 	</div>
 
-	<div class="container">
+	<div class="container left">
 		<div class="row">
 			<div class="col-md-12">
 				<div id="buttons-view"></div>
